--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,7 +2,6 @@
 
 	<h1>Sample App</h1>
 	<p>
- 	   This is the Contact page for the
- 	   <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-	   sample application.
+ 	   Contact Ruby on Rails Tutorial about the sample app at the 
+ 	   <a href="http://railstutorial.org/">Contact Page</a>.
 	</p>
